#635 fix breadcrumb (#791)
* 🚧 🐛Fix Breadcrumb not aligning properly on mobile

* 🚧 Creating a new CSS file for the breadcrumb

* 💄 slight css changes + remove container classes

* 💚 Fix lint errors

* ⚰️ Remove styles from main css file

* ♻️ Moved to Tailwindcss

* 💄 more style fixes

--- a/src/style.css
+++ b/src/style.css
@@ -263,19 +263,8 @@ footer {
   margin-left: 0% !important;
 }
 
-.breadcrumb-container{
-  font-size: 0.8rem;
-  margin-top: 1rem;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 @media (min-width: 600px) and (max-width: 1279px) {
   header {
-    width: 95%;
-  }
-  .breadcrumb-container {
     width: 95%;
   }
 }
@@ -283,11 +272,6 @@ footer {
 @media (min-width: 1280px) {
   header {
     width: 100%;
-  }
-  .breadcrumb-container {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
   }
 }
 
@@ -330,53 +314,6 @@ footer {
 .action-btn-icon {
   margin-left: 5px;
   order: 2;
-}
-
-.breadcrumb {
-  display: inline-flex;
-  text-align: center;
-  flex-wrap: wrap;
-  align-items: center;
-  font-size: 1rem;
-
-  span {
-    opacity: .5; 
-    font-weight: 100;
-  }
-
-  ol{
-    display: inline-flex;
-  }
-}
-
-.breadcrumb-content, a.breadcrumb-content {
-  -webkit-text-decoration: underline;
-  text-decoration: underline;
-  -webkit-text-decoration-style: solid;
-  text-decoration-style: solid;
-  -webkit-text-decoration-thickness: 1px;
-  text-decoration-thickness: 1px;
-  -webkit-text-decoration-color: #AAA;
-  text-decoration-color: #AAA;
-}
-
-.breadcrumb-content:hover, a.breadcrumb-content:hover {
-  -webkit-text-decoration-color: #cc4141;
-  text-decoration-color: #cc4141;
-}
-
-.breadcrumb__list__item{
-  display: inline;
-}
-
-.breadcrumb__link__active:hover{
-  color:#cc4141;
-}
-
-.breadcrumb__separator::before,
-.breadcrumb__separator::after{
-  content: " ";
-  white-space: pre;
 }
 
 .hovered {
